# Alpha_CRM_Backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  2025_12_17_1906-99659893e836_initial_scheme.py  README.md  alembic.ini  docker-compose.yml  dockerfile  entrypoint.sh  prometheus.yml  pyproject.toml  scratch.py
.github/workflows/: ci_tests.yml  master_deploy.yml
app/: main.py
app/alembic/: env.py
app/api/utils/: auth.py  responses.py
app/api/v1/: routes.py
app/api/v1/endpoints/: auth.py  curator_user.py  meetings.py  projects.py  students.py  tasks.py  teams.py
app/application/dto/: curator.py  dto.py  meeting.py  project.py  project_team.py  student.py  task.py  team.py  team_member.py
app/application/services/: __init__.py  auth_service.py  base_service.py  curator_service.py  meeting_service.py  meetings_service.py  project_team_service.py  projects_service.py  students_service.py  task_service.py  team_member_service.py  team_service.py  teams_service.py
app/application/useCases/: useCase.py
app/application/usecases/: use_case_interface.py
app/application/usecases/meetings/: create_meeting.py  delete_meeting.py  get_meeting.py  get_meeting_list.py  update_meeting.py
app/application/usecases/project/: create_project.py  delete_project.py  get_project.py  (+2 more)
app/core/: config.py  database.py  middleware.py
app/domain/entities/: __init__.py  baseEntity.py  base_entity.py  custom_types.py  project.py  user.py
app/domain/enums/: __init__.py  artifact_entity_type.py  artifact_type.py  attendance_entity_type.py  evaluation_type.py  meeting_status.py  milestone_type.py  projectStatus.py  project_status.py  project_team_status.py  semester.py  str_auto_enum.py
app/domain/interfaces/: __init__.py
app/infrastructure/cache/: redis.py
app/infrastructure/database/: base.py  base_association.py  entity_base.py
app/infrastructure/fileStorage/: s3.py
app/infrastructure/msBroker/: RabbitMQ.py
app/infrastructure/repositories/: crud_repository.py
app/infrastructure/s3_storage/: s3_client.py
app/middleware/: metrics.py
app/model/: base.py  user.py
helm/: Chart.yaml  values.yaml
helm/charts/backend/: Chart.yaml  values.yaml
helmchart/: .helmignore  chart.yaml  values.yaml
helmchart/templates/: ConfigMap.yaml  NOTES.txt  _helpers.tpl  deployment.yaml  pgadmin-deployment.yaml  pgadmin-service.yaml  secrets.yaml  service.yaml
tests/: conftest.py  test_health.py
tests/repositories/: test_base.py
tests/services/: test_base.py
(+110 files in other folders)
