[project]
name = "alpha-back"
version = "0.1.0"
description = ""
authors = [
    {name = "Александр",email = "av.sanya@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "fastapi (>=0.120.0,<0.121.0)",
    "pydantic (>=2.12.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
