[project]
name = "alpha-back"
version = "0.1.0"
description = ""
authors = [
    {name = "Александр",email = "av.sanya@yandex.ru"},
    {name = "Алексей", email = "alexkomov2005@gmail.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "fastapi (>=0.120.0,<0.121.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "prometheus-client (>=0.23.1,<0.24.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "minio (>=7.2.20,<8.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "boto3 (>=1.42.21,<2.0.0)",
    "boto3-type-annotations (>=0.3.1,<0.4.0)",
    "prometheus-client (>=0.23.1,<0.24.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
